# quantlab-bot

./: .bandit  .editorconfig  .env.example  .gitignore  .gitignore_old  .pre-commit-config.yaml  CHANGELOG.md  COMPLETION_REPORT.md  COMPLETION_REPORT.txt  DASHBOARD_FIXES.md  DATA_VALIDATION_FRAMEWORK_COMPLETE.md  DATA_VALIDATION_IMPLEMENTATION.md  DELIVERY_SUMMARY.txt  DHAN_AUTH_IMPLEMENTATION.md  DHAN_AUTH_QUICK_START.md  DHAN_SETUP_SUMMARY.md  DHAN_TOKEN_AUTOMATION.md  ENVELOPE_KD_COMPLETION_REPORT.md  ENVELOPE_KD_FINAL_STATUS.md  ENVELOPE_KD_FIXES_APPLIED.md  HYGIENE_CHECK_REPORT.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_STATUS.md  JANITOR_FINAL_PROMPT.md  KAMA_COMPARISON_FINAL.md  KAMA_STRATEGY_ANALYSIS.md  MONITORING_REPORT_2025_12_02.md  MULTI_TIMEFRAME_COMPLETION.md  MULTI_TIMEFRAME_HONEST_ASSESSMENT.md  MULTI_TIMEFRAME_IMPLEMENTATION.md  MULTI_TIMEFRAME_QUICK_REFERENCE.md  MULTI_TIMEFRAME_QUICK_START.md  MULTI_TIMEFRAME_REALITY_CHECK.md  MULTI_TIMEFRAME_STATUS.md  Makefile  OPTIMIZATION_NOTES.md  OPTIMIZATION_VALIDATION_REPORT.md  OPTIMIZED_RUNNER_TESTING.md  PARAMETER_SWEEP_RESULTS.md  PERFORMANCE_ANALYSIS.md  (+27 more)
.github/: dependabot.yml
X/: market_scanner.py
astro-prediction-analyzer/: .env.example  CONSOLIDATED_THEMES_ANALYSIS.md  PREDICTION_ANALYZER_ARCHITECTURE.md  PREDICTION_ANALYZER_QUICKSTART.md  README.md  __init__.py  analyzer.py  config.py  main.py  requirements.txt  summarizer.py  test_setup.py  transcript_handler.py  verify_setup.sh  youtube_fetcher.py
brokers/: dhan_broker.py
core/: __init__.py  benchmark.py  cash_management.py  config.py  config_manager.py  data_validation.py  engine.py  enhanced_optimizer.py  global_market_regime.py  loaders.py  market_regime.py  metrics.py  monitoring.py  multi_timeframe.py  optimizer.py  perf.py  pine_adapter.py  pine_ops.py  registry.py  report.py  strategy.py  walk_forward.py  walkforward_analyzer.py
data/: __init__.py  api-scrip-master-detailed.csv  api-scrip-master-detailed.csv.backup  basket.txt  basket_all_baskets.txt  basket_debug.txt  basket_debug_small.txt  basket_default.txt  basket_ker_filtered_gt_0.05.txt  basket_large.txt  basket_largecap_highbeta.txt  basket_largecap_lowbeta.txt  basket_main.txt  basket_main_all.txt  basket_mega.txt  basket_mid.txt  basket_midcap_highbeta.txt  basket_midcap_lowbeta.txt  basket_midcap_test10.txt  basket_small.txt  basket_smallcap_highbeta.txt  basket_smallcap_lowbeta.txt  basket_test.txt  loaders.py
docs/: ARCHITECTURE_REFACTOR_PLAN.md  BACKTEST_GUIDE.md  CODING_STANDARDS.md  COMPREHENSIVE_GUIDE.md  DASHBOARD_VISUALIZATION_SPEC.md  DATA_GUIDE.md  DEVELOPMENT_WORKFLOW.md  DHAN_API_USAGE.md  DHAN_AUTH_GUIDE.md  DHAN_AUTH_SETUP.md  DHAN_COMPREHENSIVE_GUIDE.md  DHAN_CREDENTIALS_GUIDE.md  DHAN_DATA_FETCHING_GUIDE.md  DHAN_INTEGRATION.md  DHAN_USAGE.md  EMA_CROSSOVER_STRATEGY.md  ENVELOPE_KD_STRATEGY.md  ERROR_RESOLUTION_REPORT.md  FAST_RUN_BASKET.md  FIRESTORE_SETUP.md  GCP_AUDIT_REPORT.md  GROWW_CLOUD_GUIDE.md  ICHIMOKU_FILTERS_GUIDE.md  ICHIMOKU_STRATEGY.md  INDEX.md  INDIA_VIX_GUIDE.md  INDIA_VIX_IMPLEMENTATION.md  INDICATOR_CALCULATIONS.md  INDICATOR_THRESHOLD_ANALYSIS.md  JANITOR_PROMPT.md  KNOXVILLE_STRATEGY.md  MARKET_REGIME_GUIDE.md  MONITORING_SETUP.md  MULTI_TIMEFRAME_GUIDE.md  ON_BAR_EXECUTION_MODEL.md  OPEN_TRADES_VALIDATION_REPORT.md  OVERVIEW.md  QUANTLAB_GUIDE.md  README.md  REPO_JANITOR_ENHANCED.md  (+15 more)
examples/: ichimoku_regime_demo.py  market_regime_demo.py  multi_timeframe_example.py  run_demo.py  walk_forward_demo.py
reports/: README.md  enhanced_metrics_dashboard.html  hypothesis_weekly_green_analysis.md
runners/: __init__.py  fast_max_trades.py  fast_run_basket.py  max_trades.py  run_basket.py  run_basket_backup.py  run_basket_optimized.py  run_basket_selector.py  run_weekly_rotation.py  standard_run_basket.py
scripts/: add_open_positions_to_trades.py  add_sector_to_scrip_master.py  analyze_candlestick_patterns.py  analyze_factor_correlations.py  analyze_mfe_tp.py  analyze_mtf_rsi.py  analyze_rsi_extremes.py  analyze_talib_patterns.py  analyze_worst_performer_hypothesis.py  backtest_marubozu_intraday.py  btst_marubozu_backtest.py  calculate_basket_ker.py  check_basket_data.py  (+63 more)
(+636 files in other folders)
