[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantlab"
version = "2.0.0"
description = "Quantitative trading backtesting framework"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "QuantLab Team"}
]
keywords = ["trading", "backtesting", "quantitative", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.28.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.4.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.venv
  | __pycache__
  | build
  | dist
  | reports
  | cache
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["core", "strategies", "runners", "data"]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
    "reports",
    "cache",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "S",  # bandit
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "Q",  # flake8-quotes
]
ignore = [
    "E203", # whitespace before ':'
    "E501", # line too long (let Black handle this)
    "S101", # use of assert
    "S110", # try-except-pass (acceptable in some contexts)
    "S112", # try-except-continue (acceptable in some contexts)
    "S603", # subprocess without shell=True is generally safe
    "S608", # possible SQL injection (too many false positives)
    "N802", # function names in utils can be uppercase (technical indicators)
    "N803", # argument names in legacy code (ichimoku_original.py)
    "N806", # variable names in visualization code (X, Y, Z for 3D plots)
    "F401", # unused imports in __init__.py files are often intentional
    "E402", # module level import not at top (dynamic path additions)
    "B904", # exception chaining (legacy error handling)
    "E743", # Strategy.I() is intentional API design
    "E741", # single letter vars OK for math/indicators (h, l, o, c)
    "B007", # loop control variables not used (acceptable in data processing)
    "B015", # pointless comparison (acceptable in analysis code)
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = [
    "build/",
    "dist/",
    "reports/",
    "cache/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=core",
    "--cov=strategies",
    "--cov=runners",
    "--cov-report=term-missing",
    "--cov-report=html:reports/coverage",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
